@@ -1,49 +1,46 @@
 package com.bakdata.conquery.models.query.resultinfo;
 
-import java.util.Collections;
 import java.util.Set;
 
 import com.bakdata.conquery.apiv1.query.concept.specific.CQConcept;
 import com.bakdata.conquery.models.datasets.concepts.select.Select;
 import com.bakdata.conquery.models.query.ColumnDescriptor;
 import com.bakdata.conquery.models.query.PrintSettings;
+import com.bakdata.conquery.models.query.resultinfo.printers.ResultPrinters;
 import com.bakdata.conquery.models.types.ResultType;
 import com.bakdata.conquery.models.types.SemanticType;
-import com.google.common.collect.ImmutableSet;
-import lombok.AccessLevel;
+import com.google.common.collect.Sets;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
 import lombok.NonNull;
-import lombok.RequiredArgsConstructor;
 
 @Getter
 @EqualsAndHashCode(callSuper = true)
-@RequiredArgsConstructor
 public class SelectResultInfo extends ResultInfo {
 	@NonNull
 	private final Select select;
 	@NonNull
 	private final CQConcept cqConcept;
 
-	@Getter(AccessLevel.PACKAGE)
-	@NonNull
-	private final Set<SemanticType> additionalSemantics;
+	public SelectResultInfo(Select select, CQConcept cqConcept, Set<SemanticType> semantics) {
+		super(Sets.union(semantics, Set.of(new SemanticType.SelectResultT(select))));
+		this.select = select;
+		this.cqConcept = cqConcept;
+	}
 
 	public SelectResultInfo(Select select, CQConcept cqConcept) {
-		this(select, cqConcept, Collections.emptySet());
+		this(select, cqConcept, Set.of());
 	}
 
-	@Override
-	public Set<SemanticType> getSemantics() {
-		return ImmutableSet.<SemanticType>builder()
-						   .addAll(additionalSemantics)
-						   .add(new SemanticType.SelectResultT(select))
-						   .build();
-	}
 
 	@Override
 	public String getDescription() {
 		return select.getDescription();
+	}
+
+	@Override
+	public ResultPrinters.Printer getPrinter() {
+		return select.createPrinter();
 	}
 
 	@Override
@@ -75,16 +72,14 @@ public class SelectResultInfo extends ResultInfo {
 			return null;
 		}
 
-		return label
-			   + " "
-			   + select.getColumnName();
+		return label + " " + select.getColumnName();
 	}
 
 	@Override
 	public String defaultColumnName(PrintSettings printSettings) {
 
 		StringBuilder sb = new StringBuilder();
-		String cqLabel = getCqConcept().defaultLabel(printSettings.getLocale());
+		String cqLabel = getCqConcept().defaultLabel(printSettings);
 		final String selectLabel = select.getColumnName();
 
 		if (selectLabel.equals(cqLabel)) {
@@ -107,4 +102,5 @@ public class SelectResultInfo extends ResultInfo {
 	public String toString() {
 		return "SelectResultInfo[" + select.getName() + ", " + select.getResultType() + "]";
 	}
+
 }
